analises por lea

--- a/classifsFried.tex
+++ b/classifsFried.tex
@@ -2,13 +2,13 @@
 \caption{\textbf{Um contra um}. Medida: BalancedAcc. \textit{Cada asterisco/cruz/ponto indica quando o algoritmo na linha tem melhor desempenho que o algoritmo na coluna com intervalo de confiança de 0.99/0.95/0.90.}}
 \begin{center}\begin{tabular}{lcc|cc|cc|c}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7\\
-1 - SVM  	& - &   & * & * &   & * &   \\
-2 - 5NN  	&   & - & * & * & . & * & + \\ \hline
-3 - C4.5 	&   &   & - &   &   &   &   \\
-4 - VFDT 	&   &   &   & - &   &   &   \\ \hline
-5 - NB   	&   &   & . & * & - & * &   \\
-6 - IELM 	&   &   &   &   &   & - &   \\ \hline
-7 - CIELM	&   &   &   & + &   & + & - \\\end{tabular}
+1 - 5NN  	& - &   & * & * &   &   & * \\
+2 - C4.5 	&   & - & * & * & . & + & * \\ \hline
+3 - CIELM	&   &   & - &   &   &   &   \\
+4 - IELM 	&   &   &   & - &   &   &   \\ \hline
+5 - NB   	&   &   & . & * & - &   & * \\
+6 - VFDT 	&   &   &   & + &   & - & + \\ \hline
+7 - SVM  	&   &   &   &   &   &   & - \\\end{tabular}
 \label{tab:friedClassif}
 \end{center}
 \end{table}
