--- a/classifsTab.tex
+++ b/classifsTab.tex
@@ -2,109 +2,109 @@
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
- & SVM & 5NN & C4.5 & VFDT & NB & IELM & CIELM\\ \hline 1-abalone 3class &   0.58 & \textcolor{black}{\textbf{  0.60}} & \textcolor{black}{\textbf{  0.60}} & \underline{\textcolor{blue}{\textbf{  0.61}}} & \textcolor{red}{\textbf{  0.57}} &   0.59 & \textcolor{red}{\textbf{  0.57}} \\
-2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.68}} &   0.65 &   0.66 & \textcolor{black}{\textbf{  0.68}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.68}} \\
-3-artificial charact... & \textcolor{black}{\textbf{  0.55}} & \underline{\textcolor{blue}{\textbf{  0.58}}} &   0.32 &   0.36 &   0.30 &   0.45 & \textcolor{red}{\textbf{  0.29}} \\
-4-autoUniv au1 1000 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.65}}} &   0.54 &   0.54 &   0.55 & \textcolor{black}{\textbf{  0.57}} & \textcolor{red}{\textbf{  0.50}} \\
-5-autoUniv au7 300 d... &   0.31 & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.29 &   0.28 & \textcolor{black}{\textbf{  0.33}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.33}} \\
-6-autoUniv au7 700 &   0.36 & \underline{\textcolor{blue}{\textbf{  0.52}}} &   0.40 &   0.38 & \textcolor{black}{\textbf{  0.43}} & \textcolor{red}{\textbf{  0.33}} & \textcolor{black}{\textbf{  0.43}} \\
-7-balance scale &   0.60 & \textcolor{red}{\textbf{  0.57}} &   0.61 &   0.62 &   0.61 & \underline{\textcolor{blue}{\textbf{  0.69}}} & \textcolor{black}{\textbf{  0.65}} \\ \hline
-8-banana &   0.87 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.54}} &   0.59 &   0.57 & \underline{\textcolor{blue}{\textbf{  0.90}}} &   0.71 \\
-9-banknote authentic... & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.97 &   0.98 & \textcolor{red}{\textbf{  0.76}} & \textcolor{blue}{\textbf{  1.00}} &   0.96 \\
-10-bupa & \textcolor{black}{\textbf{  0.61}} & \underline{\textcolor{blue}{\textbf{  0.63}}} &   0.57 &   0.59 &   0.59 & \textcolor{red}{\textbf{  0.50}} &   0.52 \\
-11-car evaluation &   0.71 & \textcolor{black}{\textbf{  0.79}} & \textcolor{red}{\textbf{  0.42}} &   0.43 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.91}}} &   0.58 \\
-12-cardiotocography 1... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 & \textcolor{red}{\textbf{  0.10}} & \textcolor{blue}{\textbf{  1.00}} \\
-13-cardiotocography 3... & \textcolor{blue}{\textbf{  0.98}} & \textcolor{blue}{\textbf{  0.98}} &   0.96 &   0.96 &   0.94 & \textcolor{red}{\textbf{  0.33}} &   0.88 \\
-14-climate simulation... &   0.55 & \textcolor{black}{\textbf{  0.62}} &   0.55 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.64}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\ \hline
-15-connect. mines vs... & \underline{\textcolor{blue}{\textbf{  0.85}}} & \textcolor{black}{\textbf{  0.73}} &   0.70 & \textcolor{red}{\textbf{  0.67}} &   0.69 & \textcolor{red}{\textbf{  0.67}} &   0.70 \\
-16-connect. vowel red... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.77 & \textcolor{red}{\textbf{  0.43}} &   0.45 &   0.64 & \textcolor{black}{\textbf{  0.89}} &   0.65 \\
-17-connect. vowel... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.79 & \textcolor{red}{\textbf{  0.44}} &   0.45 &   0.64 & \textcolor{black}{\textbf{  0.87}} &   0.65 \\
-18-dbworld subjects &   0.79 &   0.76 & \textcolor{red}{\textbf{  0.60}} &   0.62 & \textcolor{blue}{\textbf{  0.84}} &   0.68 & \textcolor{blue}{\textbf{  0.84}} \\
-19-first order theore... & \underline{\textcolor{blue}{\textbf{  0.44}}} & \textcolor{black}{\textbf{  0.41}} &   0.26 &   0.30 &   0.24 &   0.36 & \textcolor{red}{\textbf{  0.17}} \\
-20-flare &   0.58 &   0.59 & \textcolor{blue}{\textbf{  0.61}} & \textcolor{blue}{\textbf{  0.61}} &   0.48 &   0.59 & \textcolor{red}{\textbf{  0.38}} \\
-21-glass & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{red}{\textbf{  0.39}} & \textcolor{red}{\textbf{  0.39}} &   0.50 &   0.57 &   0.45 \\ \hline
-22-habermans survival &   0.55 & \textcolor{blue}{\textbf{  0.57}} & \textcolor{blue}{\textbf{  0.57}} &   0.56 & \textcolor{blue}{\textbf{  0.57}} & \textcolor{red}{\textbf{  0.50}} &   0.55 \\
-23-heart disease clev... & \underline{\textcolor{blue}{\textbf{  0.35}}} &   0.32 & \textcolor{black}{\textbf{  0.33}} & \textcolor{black}{\textbf{  0.33}} &   0.32 & \textcolor{red}{\textbf{  0.20}} &   0.23 \\
-24-heart disease hung... &   0.74 &   0.77 &   0.77 &   0.78 & \textcolor{blue}{\textbf{  0.81}} & \textcolor{red}{\textbf{  0.49}} & \textcolor{blue}{\textbf{  0.81}} \\
-25-hepatitis &   0.68 &   0.61 &   0.74 &   0.73 & \underline{\textcolor{blue}{\textbf{  0.76}}} & \textcolor{red}{\textbf{  0.49}} & \textcolor{black}{\textbf{  0.75}} \\
-26-hill valley withou... & \underline{\textcolor{blue}{\textbf{  0.64}}} & \textcolor{red}{\textbf{  0.50}} &   0.52 & \textcolor{black}{\textbf{  0.53}} &   0.51 &   0.52 & \textcolor{red}{\textbf{  0.50}} \\
-27-horse colic surgic... & \textcolor{black}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.70 &   0.71 &   0.57 & \textcolor{red}{\textbf{  0.51}} &   0.54 \\
-28-indian liver patie... &   0.58 &   0.57 & \textcolor{black}{\textbf{  0.60}} &   0.58 & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\ \hline
-29-ionosphere &   0.83 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.79}} & \textcolor{red}{\textbf{  0.79}} &   0.84 & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.86 \\
-30-iris & \textcolor{black}{\textbf{  0.96}} &   0.94 & \textcolor{red}{\textbf{  0.79}} &   0.86 &   0.91 & \underline{\textcolor{blue}{\textbf{  0.97}}} &   0.95 \\
+ & 5NN & C4.5 & CIELM & IELM & NB & VFDT & SVM\\ \hline 1-abalone 3class &   0.58 & \textcolor{black}{\textbf{  0.60}} & \textcolor{black}{\textbf{  0.60}} & \underline{\textcolor{blue}{\textbf{  0.61}}} & \textcolor{red}{\textbf{  0.57}} & \textcolor{red}{\textbf{  0.57}} &   0.59 \\
+2-arcene & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.68}} &   0.65 &   0.66 & \textcolor{black}{\textbf{  0.68}} & \textcolor{black}{\textbf{  0.68}} & \textcolor{red}{\textbf{  0.50}} \\
+3-artificial charact... & \textcolor{black}{\textbf{  0.55}} & \underline{\textcolor{blue}{\textbf{  0.58}}} &   0.32 &   0.36 &   0.30 & \textcolor{red}{\textbf{  0.29}} &   0.45 \\
+4-autoUniv au1 1000 &   0.56 & \underline{\textcolor{blue}{\textbf{  0.65}}} &   0.54 &   0.54 &   0.55 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.57}} \\
+5-autoUniv au7 300 d... &   0.31 & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.29 &   0.28 & \textcolor{black}{\textbf{  0.33}} & \textcolor{black}{\textbf{  0.33}} & \textcolor{red}{\textbf{  0.20}} \\ \hline
+6-autoUniv au7 700 &   0.36 & \underline{\textcolor{blue}{\textbf{  0.52}}} &   0.40 &   0.38 & \textcolor{black}{\textbf{  0.43}} & \textcolor{black}{\textbf{  0.43}} & \textcolor{red}{\textbf{  0.33}} \\
+7-balance scale &   0.60 & \textcolor{red}{\textbf{  0.57}} &   0.61 &   0.62 &   0.61 & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.69}}} \\
+8-banana &   0.87 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.54}} &   0.59 &   0.57 &   0.71 & \underline{\textcolor{blue}{\textbf{  0.90}}} \\
+9-banknote authentic... & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.97 &   0.98 & \textcolor{red}{\textbf{  0.76}} &   0.96 & \textcolor{blue}{\textbf{  1.00}} \\
+10-bupa & \textcolor{black}{\textbf{  0.61}} & \underline{\textcolor{blue}{\textbf{  0.63}}} &   0.57 &   0.59 &   0.59 &   0.52 & \textcolor{red}{\textbf{  0.50}} \\ \hline
+11-car evaluation &   0.71 & \textcolor{black}{\textbf{  0.79}} & \textcolor{red}{\textbf{  0.42}} &   0.43 &   0.58 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.91}}} \\
+12-cardiotocography 1... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 & \textcolor{blue}{\textbf{  1.00}} & \textcolor{red}{\textbf{  0.10}} \\
+13-cardiotocography 3... & \textcolor{blue}{\textbf{  0.98}} & \textcolor{blue}{\textbf{  0.98}} &   0.96 &   0.96 &   0.94 &   0.88 & \textcolor{red}{\textbf{  0.33}} \\
+14-climate simulation... &   0.55 & \textcolor{black}{\textbf{  0.62}} &   0.55 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.64}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\
+15-connect. mines vs... & \underline{\textcolor{blue}{\textbf{  0.85}}} & \textcolor{black}{\textbf{  0.73}} &   0.70 & \textcolor{red}{\textbf{  0.67}} &   0.69 &   0.70 & \textcolor{red}{\textbf{  0.67}} \\ \hline
+16-connect. vowel red... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.77 & \textcolor{red}{\textbf{  0.43}} &   0.45 &   0.64 &   0.65 & \textcolor{black}{\textbf{  0.89}} \\
+17-connect. vowel... & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.79 & \textcolor{red}{\textbf{  0.44}} &   0.45 &   0.64 &   0.65 & \textcolor{black}{\textbf{  0.87}} \\
+18-dbworld subjects &   0.79 &   0.76 & \textcolor{red}{\textbf{  0.60}} &   0.62 & \textcolor{blue}{\textbf{  0.84}} & \textcolor{blue}{\textbf{  0.84}} &   0.68 \\
+19-first order theore... & \underline{\textcolor{blue}{\textbf{  0.44}}} & \textcolor{black}{\textbf{  0.41}} &   0.26 &   0.30 &   0.24 & \textcolor{red}{\textbf{  0.17}} &   0.36 \\
+20-flare &   0.58 &   0.59 & \textcolor{blue}{\textbf{  0.61}} & \textcolor{blue}{\textbf{  0.61}} &   0.48 & \textcolor{red}{\textbf{  0.38}} &   0.59 \\ \hline
+21-glass & \textcolor{black}{\textbf{  0.65}} & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{red}{\textbf{  0.39}} & \textcolor{red}{\textbf{  0.39}} &   0.50 &   0.45 &   0.57 \\
+22-habermans survival &   0.55 & \textcolor{blue}{\textbf{  0.57}} & \textcolor{blue}{\textbf{  0.57}} &   0.56 & \textcolor{blue}{\textbf{  0.57}} &   0.55 & \textcolor{red}{\textbf{  0.50}} \\
+23-heart disease clev... & \underline{\textcolor{blue}{\textbf{  0.35}}} &   0.32 & \textcolor{black}{\textbf{  0.33}} & \textcolor{black}{\textbf{  0.33}} &   0.32 &   0.23 & \textcolor{red}{\textbf{  0.20}} \\
+24-heart disease hung... &   0.74 &   0.77 &   0.77 &   0.78 & \textcolor{blue}{\textbf{  0.81}} & \textcolor{blue}{\textbf{  0.81}} & \textcolor{red}{\textbf{  0.49}} \\
+25-hepatitis &   0.68 &   0.61 &   0.74 &   0.73 & \underline{\textcolor{blue}{\textbf{  0.76}}} & \textcolor{black}{\textbf{  0.75}} & \textcolor{red}{\textbf{  0.49}} \\ \hline
+26-hill valley withou... & \underline{\textcolor{blue}{\textbf{  0.64}}} & \textcolor{red}{\textbf{  0.50}} &   0.52 & \textcolor{black}{\textbf{  0.53}} &   0.51 & \textcolor{red}{\textbf{  0.50}} &   0.52 \\
+27-horse colic surgic... & \textcolor{black}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.70 &   0.71 &   0.57 &   0.54 & \textcolor{red}{\textbf{  0.51}} \\
+28-indian liver patie... &   0.58 &   0.57 & \textcolor{black}{\textbf{  0.60}} &   0.58 & \underline{\textcolor{blue}{\textbf{  0.67}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\
+29-ionosphere &   0.83 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.79}} & \textcolor{red}{\textbf{  0.79}} &   0.84 &   0.86 & \underline{\textcolor{blue}{\textbf{  0.93}}} \\
+30-iris & \textcolor{black}{\textbf{  0.96}} &   0.94 & \textcolor{red}{\textbf{  0.79}} &   0.86 &   0.91 &   0.95 & \underline{\textcolor{blue}{\textbf{  0.97}}} \\ \hline
 31-kr vs kp & \textcolor{black}{\textbf{  0.95}} & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.89 & \textcolor{red}{\textbf{  0.85}} &   0.88 &   0.94 &   0.94 \\
-32-leaf &   0.60 &   0.61 &   0.43 &   0.48 & \underline{\textcolor{blue}{\textbf{  0.73}}} & \textcolor{red}{\textbf{  0.21}} & \textcolor{black}{\textbf{  0.69}} \\
-33-leukemia haslinger &   0.81 &   0.74 &   0.79 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.88}} \\\end{tabular}\label{tab:balaccClassif0}
+32-leaf &   0.60 &   0.61 &   0.43 &   0.48 & \underline{\textcolor{blue}{\textbf{  0.73}}} & \textcolor{black}{\textbf{  0.69}} & \textcolor{red}{\textbf{  0.21}} \\
+33-leukemia haslinger &   0.81 &   0.74 &   0.79 &   0.77 & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.50}} \\\end{tabular}\label{tab:balaccClassif0}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
- & SVM & 5NN & C4.5 & VFDT & NB & IELM & CIELM\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.81}}} & \textcolor{black}{\textbf{  0.80}} &   0.78 &   0.79 & \textcolor{black}{\textbf{  0.80}} & \textcolor{black}{\textbf{  0.80}} \\
-35-mfeat fourier & \underline{\textcolor{blue}{\textbf{  0.80}}} &   0.75 &   0.74 & \textcolor{red}{\textbf{  0.73}} & \textcolor{black}{\textbf{  0.76}} &   0.74 & \textcolor{black}{\textbf{  0.76}} \\
-36-molecular promotor... &   0.80 &   0.80 & \textcolor{red}{\textbf{  0.61}} &   0.63 & \textcolor{black}{\textbf{  0.90}} & \underline{\textcolor{blue}{\textbf{  0.92}}} & \textcolor{black}{\textbf{  0.90}} \\
-37-molecular splice j... &   0.79 &   0.93 &   0.83 & \textcolor{red}{\textbf{  0.78}} & \textcolor{black}{\textbf{  0.94}} & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.94}} \\
-38-monks1 &   0.69 & \textcolor{black}{\textbf{  0.80}} & \textcolor{red}{\textbf{  0.66}} & \textcolor{red}{\textbf{  0.66}} &   0.67 & \underline{\textcolor{blue}{\textbf{  0.90}}} &   0.76 \\
+ & 5NN & C4.5 & CIELM & IELM & NB & VFDT & SVM\\ \hline 34-mammographic mass & \textcolor{red}{\textbf{  0.74}} & \underline{\textcolor{blue}{\textbf{  0.81}}} & \textcolor{black}{\textbf{  0.80}} &   0.78 &   0.79 & \textcolor{black}{\textbf{  0.80}} & \textcolor{black}{\textbf{  0.80}} \\
+35-mfeat fourier & \underline{\textcolor{blue}{\textbf{  0.80}}} &   0.75 &   0.74 & \textcolor{red}{\textbf{  0.73}} & \textcolor{black}{\textbf{  0.76}} & \textcolor{black}{\textbf{  0.76}} &   0.74 \\
+36-molecular promotor... &   0.80 &   0.80 & \textcolor{red}{\textbf{  0.61}} &   0.63 & \textcolor{black}{\textbf{  0.90}} & \textcolor{black}{\textbf{  0.90}} & \underline{\textcolor{blue}{\textbf{  0.92}}} \\
+37-molecular splice j... &   0.79 &   0.93 &   0.83 & \textcolor{red}{\textbf{  0.78}} & \textcolor{black}{\textbf{  0.94}} & \textcolor{black}{\textbf{  0.94}} & \underline{\textcolor{blue}{\textbf{  0.95}}} \\
+38-monks1 &   0.69 & \textcolor{black}{\textbf{  0.80}} & \textcolor{red}{\textbf{  0.66}} & \textcolor{red}{\textbf{  0.66}} &   0.67 &   0.76 & \underline{\textcolor{blue}{\textbf{  0.90}}} \\ \hline
 39-monks2 & \textcolor{red}{\textbf{  0.45}} & \textcolor{blue}{\textbf{  0.50}} & \textcolor{blue}{\textbf{  0.50}} &   0.49 &   0.49 & \textcolor{blue}{\textbf{  0.50}} & \textcolor{blue}{\textbf{  0.50}} \\
-40-monks3 &   0.76 & \underline{\textcolor{blue}{\textbf{  1.00}}} &   0.77 & \textcolor{red}{\textbf{  0.75}} &   0.90 & \textcolor{black}{\textbf{  0.97}} &   0.94 \\ \hline
-41-movement libras & \underline{\textcolor{blue}{\textbf{  0.82}}} &   0.61 &   0.54 &   0.57 & \textcolor{black}{\textbf{  0.63}} & \textcolor{red}{\textbf{  0.41}} & \textcolor{black}{\textbf{  0.63}} \\
-42-movement libras 10 & \underline{\textcolor{blue}{\textbf{  0.86}}} &   0.64 &   0.54 &   0.57 &   0.67 & \textcolor{red}{\textbf{  0.31}} & \textcolor{black}{\textbf{  0.68}} \\
-43-mushroom & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 & \textcolor{red}{\textbf{  0.95}} & \textcolor{blue}{\textbf{  1.00}} &   0.99 \\
+40-monks3 &   0.76 & \underline{\textcolor{blue}{\textbf{  1.00}}} &   0.77 & \textcolor{red}{\textbf{  0.75}} &   0.90 &   0.94 & \textcolor{black}{\textbf{  0.97}} \\
+41-movement libras & \underline{\textcolor{blue}{\textbf{  0.82}}} &   0.61 &   0.54 &   0.57 & \textcolor{black}{\textbf{  0.63}} & \textcolor{black}{\textbf{  0.63}} & \textcolor{red}{\textbf{  0.41}} \\
+42-movement libras 10 & \underline{\textcolor{blue}{\textbf{  0.86}}} &   0.64 &   0.54 &   0.57 &   0.67 & \textcolor{black}{\textbf{  0.68}} & \textcolor{red}{\textbf{  0.31}} \\
+43-mushroom & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 & \textcolor{red}{\textbf{  0.95}} &   0.99 & \textcolor{blue}{\textbf{  1.00}} \\ \hline
 44-ozone eighthr & \textcolor{black}{\textbf{  0.66}} &   0.63 &   0.54 &   0.55 & \underline{\textcolor{blue}{\textbf{  0.75}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\
 45-ozone onehr & \textcolor{black}{\textbf{  0.60}} &   0.58 &   0.51 &   0.51 & \underline{\textcolor{blue}{\textbf{  0.75}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\
-46-page blocks & \textcolor{black}{\textbf{  0.76}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.35 &   0.44 &   0.69 & \textcolor{red}{\textbf{  0.31}} &   0.56 \\
-47-parkinsons & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.79}} &   0.75 &   0.73 &   0.77 &   0.65 & \textcolor{red}{\textbf{  0.53}} \\ \hline
-48-phoneme & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.83}} &   0.73 & \textcolor{red}{\textbf{  0.66}} &   0.73 &   0.80 &   0.76 \\
-49-pima indians diabe... &   0.66 &   0.71 & \textcolor{blue}{\textbf{  0.72}} &   0.67 &   0.70 & \textcolor{red}{\textbf{  0.50}} & \textcolor{blue}{\textbf{  0.72}} \\
-50-planning relax &   0.49 & \textcolor{black}{\textbf{  0.50}} &   0.47 & \textcolor{red}{\textbf{  0.46}} &   0.47 & \underline{\textcolor{blue}{\textbf{  0.51}}} & \textcolor{black}{\textbf{  0.50}} \\
-51-qsar biodegradatio... & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.81 &   0.80 & \textcolor{red}{\textbf{  0.76}} & \textcolor{red}{\textbf{  0.76}} & \textcolor{black}{\textbf{  0.82}} &   0.78 \\
-52-ringnorm &   0.74 &   0.90 &   0.76 &   0.74 & \textcolor{black}{\textbf{  0.96}} & \textcolor{red}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.97}}} \\
-53-robot failure lp1 &   0.82 &   0.67 &   0.39 &   0.40 & \textcolor{black}{\textbf{  0.86}} & \textcolor{red}{\textbf{  0.25}} & \underline{\textcolor{blue}{\textbf{  0.92}}} \\
-54-robot failure lp4 &   0.81 &   0.77 &   0.47 &   0.46 & \textcolor{black}{\textbf{  0.89}} & \textcolor{red}{\textbf{  0.33}} & \underline{\textcolor{blue}{\textbf{  0.91}}} \\ \hline
-55-robot failure lp5 &   0.60 &   0.61 &   0.30 &   0.33 & \textcolor{black}{\textbf{  0.62}} & \textcolor{red}{\textbf{  0.20}} & \underline{\textcolor{blue}{\textbf{  0.65}}} \\
-56-robot nav sensor r... & \textcolor{black}{\textbf{  0.98}} & \underline{\textcolor{blue}{\textbf{  1.00}}} & \textcolor{red}{\textbf{  0.50}} &   0.59 &   0.82 &   0.96 & \textcolor{black}{\textbf{  0.98}} \\
-57-saheart &   0.60 &   0.61 &   0.65 &   0.62 & \textcolor{black}{\textbf{  0.67}} & \textcolor{red}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.68}}} \\
-58-seeds & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.93}}} & \textcolor{red}{\textbf{  0.90}} &   0.91 & \textcolor{red}{\textbf{  0.90}} & \textcolor{red}{\textbf{  0.90}} & \textcolor{red}{\textbf{  0.90}} \\
-59-semeion & \textcolor{black}{\textbf{  0.91}} & \textcolor{red}{\textbf{  0.75}} &   0.82 &   0.78 &   0.85 & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.82 \\
-60-spambase &   0.89 & \underline{\textcolor{blue}{\textbf{  0.92}}} & \textcolor{black}{\textbf{  0.90}} &   0.88 &   0.82 &   0.81 & \textcolor{red}{\textbf{  0.80}} \\
-61-spect heart & \textcolor{red}{\textbf{  0.65}} & \textcolor{black}{\textbf{  0.68}} &   0.66 & \textcolor{red}{\textbf{  0.65}} &   0.67 & \underline{\textcolor{blue}{\textbf{  0.71}}} &   0.67 \\ \hline
+46-page blocks & \textcolor{black}{\textbf{  0.76}} & \underline{\textcolor{blue}{\textbf{  0.84}}} &   0.35 &   0.44 &   0.69 &   0.56 & \textcolor{red}{\textbf{  0.31}} \\
+47-parkinsons & \underline{\textcolor{blue}{\textbf{  0.95}}} & \textcolor{black}{\textbf{  0.79}} &   0.75 &   0.73 &   0.77 & \textcolor{red}{\textbf{  0.53}} &   0.65 \\
+48-phoneme & \underline{\textcolor{blue}{\textbf{  0.87}}} & \textcolor{black}{\textbf{  0.83}} &   0.73 & \textcolor{red}{\textbf{  0.66}} &   0.73 &   0.76 &   0.80 \\ \hline
+49-pima indians diabe... &   0.66 &   0.71 & \textcolor{blue}{\textbf{  0.72}} &   0.67 &   0.70 & \textcolor{blue}{\textbf{  0.72}} & \textcolor{red}{\textbf{  0.50}} \\
+50-planning relax &   0.49 & \textcolor{black}{\textbf{  0.50}} &   0.47 & \textcolor{red}{\textbf{  0.46}} &   0.47 & \textcolor{black}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.51}}} \\
+51-qsar biodegradatio... & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.81 &   0.80 & \textcolor{red}{\textbf{  0.76}} & \textcolor{red}{\textbf{  0.76}} &   0.78 & \textcolor{black}{\textbf{  0.82}} \\
+52-ringnorm &   0.74 &   0.90 &   0.76 &   0.74 & \textcolor{black}{\textbf{  0.96}} & \underline{\textcolor{blue}{\textbf{  0.97}}} & \textcolor{red}{\textbf{  0.50}} \\
+53-robot failure lp1 &   0.82 &   0.67 &   0.39 &   0.40 & \textcolor{black}{\textbf{  0.86}} & \underline{\textcolor{blue}{\textbf{  0.92}}} & \textcolor{red}{\textbf{  0.25}} \\ \hline
+54-robot failure lp4 &   0.81 &   0.77 &   0.47 &   0.46 & \textcolor{black}{\textbf{  0.89}} & \underline{\textcolor{blue}{\textbf{  0.91}}} & \textcolor{red}{\textbf{  0.33}} \\
+55-robot failure lp5 &   0.60 &   0.61 &   0.30 &   0.33 & \textcolor{black}{\textbf{  0.62}} & \underline{\textcolor{blue}{\textbf{  0.65}}} & \textcolor{red}{\textbf{  0.20}} \\
+56-robot nav sensor r... & \textcolor{black}{\textbf{  0.98}} & \underline{\textcolor{blue}{\textbf{  1.00}}} & \textcolor{red}{\textbf{  0.50}} &   0.59 &   0.82 & \textcolor{black}{\textbf{  0.98}} &   0.96 \\
+57-saheart &   0.60 &   0.61 &   0.65 &   0.62 & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.68}}} & \textcolor{red}{\textbf{  0.50}} \\
+58-seeds & \textcolor{black}{\textbf{  0.92}} & \underline{\textcolor{blue}{\textbf{  0.93}}} & \textcolor{red}{\textbf{  0.90}} &   0.91 & \textcolor{red}{\textbf{  0.90}} & \textcolor{red}{\textbf{  0.90}} & \textcolor{red}{\textbf{  0.90}} \\ \hline
+59-semeion & \textcolor{black}{\textbf{  0.91}} & \textcolor{red}{\textbf{  0.75}} &   0.82 &   0.78 &   0.85 &   0.82 & \underline{\textcolor{blue}{\textbf{  0.93}}} \\
+60-spambase &   0.89 & \underline{\textcolor{blue}{\textbf{  0.92}}} & \textcolor{black}{\textbf{  0.90}} &   0.88 &   0.82 & \textcolor{red}{\textbf{  0.80}} &   0.81 \\
+61-spect heart & \textcolor{red}{\textbf{  0.65}} & \textcolor{black}{\textbf{  0.68}} &   0.66 & \textcolor{red}{\textbf{  0.65}} &   0.67 &   0.67 & \underline{\textcolor{blue}{\textbf{  0.71}}} \\
 62-spectf heart &   0.58 &   0.62 & \textcolor{black}{\textbf{  0.63}} &   0.59 & \underline{\textcolor{blue}{\textbf{  0.77}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} \\
-63-statlog australian... &   0.80 &   0.84 & \textcolor{blue}{\textbf{  0.86}} &   0.83 &   0.75 & \textcolor{red}{\textbf{  0.50}} & \textcolor{blue}{\textbf{  0.86}} \\
-64-statlog german cre... &   0.61 &   0.64 & \textcolor{black}{\textbf{  0.66}} &   0.64 & \underline{\textcolor{blue}{\textbf{  0.68}}} &   0.55 & \textcolor{red}{\textbf{  0.54}} \\
-65-statlog heart &   0.75 &   0.77 &   0.80 &   0.76 & \underline{\textcolor{blue}{\textbf{  0.84}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.83}} \\
-66-statlog image segm... & \textcolor{blue}{\textbf{  0.96}} & \textcolor{blue}{\textbf{  0.96}} &   0.81 &   0.86 &   0.78 & \textcolor{red}{\textbf{  0.61}} &   0.79 \\\end{tabular}\label{tab:balaccClassif1}
+63-statlog australian... &   0.80 &   0.84 & \textcolor{blue}{\textbf{  0.86}} &   0.83 &   0.75 & \textcolor{blue}{\textbf{  0.86}} & \textcolor{red}{\textbf{  0.50}} \\ \hline
+64-statlog german cre... &   0.61 &   0.64 & \textcolor{black}{\textbf{  0.66}} &   0.64 & \underline{\textcolor{blue}{\textbf{  0.68}}} & \textcolor{red}{\textbf{  0.54}} &   0.55 \\
+65-statlog heart &   0.75 &   0.77 &   0.80 &   0.76 & \underline{\textcolor{blue}{\textbf{  0.84}}} & \textcolor{black}{\textbf{  0.83}} & \textcolor{red}{\textbf{  0.50}} \\
+66-statlog image segm... & \textcolor{blue}{\textbf{  0.96}} & \textcolor{blue}{\textbf{  0.96}} &   0.81 &   0.86 &   0.78 &   0.79 & \textcolor{red}{\textbf{  0.61}} \\\end{tabular}\label{tab:balaccClassif1}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
 \caption{BalancedAcc: O maior valor de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Apenas negrito indica segundo melhor valor.}
 \begin{center}\begin{tabular}{lc|c|c|c|c|c|c}
- & SVM & 5NN & C4.5 & VFDT & NB & IELM & CIELM\\ \hline 67-statlog landsat sa... & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{black}{\textbf{  0.83}} &   0.65 &   0.74 &   0.79 & \textcolor{red}{\textbf{  0.17}} &   0.80 \\
-68-statlog vehicle si... & \textcolor{black}{\textbf{  0.70}} & \underline{\textcolor{blue}{\textbf{  0.72}}} &   0.68 &   0.69 &   0.47 & \textcolor{red}{\textbf{  0.26}} &   0.46 \\
-69-steel plates fault... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.98 &   0.89 & \textcolor{red}{\textbf{  0.50}} &   0.99 \\
-70-systhetic control & \underline{\textcolor{blue}{\textbf{  0.97}}} &   0.92 &   0.80 &   0.82 & \textcolor{black}{\textbf{  0.94}} & \textcolor{red}{\textbf{  0.17}} & \textcolor{black}{\textbf{  0.94}} \\
-71-teaching assistant... &   0.40 &   0.48 &   0.46 &   0.43 & \underline{\textcolor{blue}{\textbf{  0.51}}} & \textcolor{red}{\textbf{  0.32}} & \textcolor{black}{\textbf{  0.50}} \\
-72-thyroid ann &   0.60 & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.53 &   0.55 &   0.51 & \textcolor{black}{\textbf{  0.74}} & \textcolor{red}{\textbf{  0.33}} \\
-73-thyroid hypothyroi... &   0.78 & \underline{\textcolor{blue}{\textbf{  0.96}}} &   0.82 &   0.77 & \textcolor{black}{\textbf{  0.91}} & \textcolor{red}{\textbf{  0.59}} &   0.76 \\ \hline
-74-thyroid newthyroid & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.90 &   0.71 & \textcolor{red}{\textbf{  0.69}} &   0.91 &   0.80 & \textcolor{black}{\textbf{  0.93}} \\
-75-thyroid sick &   0.43 &   0.45 &   0.39 &   0.39 & \textcolor{blue}{\textbf{  0.49}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{blue}{\textbf{  0.49}} \\
-76-thyroid sick euthy... & \textcolor{black}{\textbf{  0.77}} & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.56 &   0.58 &   0.69 & \textcolor{red}{\textbf{  0.52}} &   0.66 \\
-77-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.81 &   0.67 &   0.71 & \textcolor{red}{\textbf{  0.63}} & \textcolor{black}{\textbf{  0.87}} & \textcolor{red}{\textbf{  0.63}} \\
-78-turkiye student &   0.28 & \textcolor{black}{\textbf{  0.31}} & \textcolor{red}{\textbf{  0.24}} &   0.25 &   0.29 & \underline{\textcolor{blue}{\textbf{  0.34}}} &   0.25 \\
-79-twonorm &   0.95 & \textcolor{red}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.98}} &   0.94 &   0.97 & \textcolor{blue}{\textbf{  0.98}} &   0.97 \\
-80-user knowledge &   0.67 & \textcolor{black}{\textbf{  0.77}} &   0.47 & \textcolor{red}{\textbf{  0.45}} &   0.65 & \underline{\textcolor{blue}{\textbf{  0.83}}} &   0.76 \\ \hline
-81-vertebra column 2c &   0.79 &   0.75 &   0.78 &   0.74 & \textcolor{black}{\textbf{  0.80}} & \textcolor{red}{\textbf{  0.50}} & \underline{\textcolor{blue}{\textbf{  0.81}}} \\
-82-vertebra column 3c &   0.73 &   0.76 &   0.75 &   0.72 & \textcolor{black}{\textbf{  0.77}} & \textcolor{red}{\textbf{  0.33}} & \underline{\textcolor{blue}{\textbf{  0.79}}} \\
-83-volcanoes a3 & \textcolor{blue}{\textbf{  0.34}} & \textcolor{blue}{\textbf{  0.34}} &   0.22 &   0.23 &   0.32 & \textcolor{red}{\textbf{  0.20}} &   0.29 \\
-84-volcanoes b2 & \textcolor{black}{\textbf{  0.27}} & \textcolor{black}{\textbf{  0.27}} & \textcolor{red}{\textbf{  0.20}} &   0.22 & \underline{\textcolor{blue}{\textbf{  0.29}}} & \textcolor{red}{\textbf{  0.20}} &   0.25 \\
+ & 5NN & C4.5 & CIELM & IELM & NB & VFDT & SVM\\ \hline 67-statlog landsat sa... & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{black}{\textbf{  0.83}} &   0.65 &   0.74 &   0.79 &   0.80 & \textcolor{red}{\textbf{  0.17}} \\
+68-statlog vehicle si... & \textcolor{black}{\textbf{  0.70}} & \underline{\textcolor{blue}{\textbf{  0.72}}} &   0.68 &   0.69 &   0.47 &   0.46 & \textcolor{red}{\textbf{  0.26}} \\
+69-steel plates fault... & \textcolor{blue}{\textbf{  1.00}} & \textcolor{blue}{\textbf{  1.00}} &   0.98 &   0.98 &   0.89 &   0.99 & \textcolor{red}{\textbf{  0.50}} \\
+70-systhetic control & \underline{\textcolor{blue}{\textbf{  0.97}}} &   0.92 &   0.80 &   0.82 & \textcolor{black}{\textbf{  0.94}} & \textcolor{black}{\textbf{  0.94}} & \textcolor{red}{\textbf{  0.17}} \\
+71-teaching assistant... &   0.40 &   0.48 &   0.46 &   0.43 & \underline{\textcolor{blue}{\textbf{  0.51}}} & \textcolor{black}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.32}} \\ \hline
+72-thyroid ann &   0.60 & \underline{\textcolor{blue}{\textbf{  0.99}}} &   0.53 &   0.55 &   0.51 & \textcolor{red}{\textbf{  0.33}} & \textcolor{black}{\textbf{  0.74}} \\
+73-thyroid hypothyroi... &   0.78 & \underline{\textcolor{blue}{\textbf{  0.96}}} &   0.82 &   0.77 & \textcolor{black}{\textbf{  0.91}} &   0.76 & \textcolor{red}{\textbf{  0.59}} \\
+74-thyroid newthyroid & \underline{\textcolor{blue}{\textbf{  0.95}}} &   0.90 &   0.71 & \textcolor{red}{\textbf{  0.69}} &   0.91 & \textcolor{black}{\textbf{  0.93}} &   0.80 \\
+75-thyroid sick &   0.43 &   0.45 &   0.39 &   0.39 & \textcolor{blue}{\textbf{  0.49}} & \textcolor{blue}{\textbf{  0.49}} & \textcolor{red}{\textbf{  0.20}} \\
+76-thyroid sick euthy... & \textcolor{black}{\textbf{  0.77}} & \underline{\textcolor{blue}{\textbf{  0.93}}} &   0.56 &   0.58 &   0.69 &   0.66 & \textcolor{red}{\textbf{  0.52}} \\ \hline
+77-tic tac toe & \underline{\textcolor{blue}{\textbf{  0.98}}} &   0.81 &   0.67 &   0.71 & \textcolor{red}{\textbf{  0.63}} & \textcolor{red}{\textbf{  0.63}} & \textcolor{black}{\textbf{  0.87}} \\
+78-turkiye student &   0.28 & \textcolor{black}{\textbf{  0.31}} & \textcolor{red}{\textbf{  0.24}} &   0.25 &   0.29 &   0.25 & \underline{\textcolor{blue}{\textbf{  0.34}}} \\
+79-twonorm &   0.95 & \textcolor{red}{\textbf{  0.85}} & \textcolor{blue}{\textbf{  0.98}} &   0.94 &   0.97 &   0.97 & \textcolor{blue}{\textbf{  0.98}} \\
+80-user knowledge &   0.67 & \textcolor{black}{\textbf{  0.77}} &   0.47 & \textcolor{red}{\textbf{  0.45}} &   0.65 &   0.76 & \underline{\textcolor{blue}{\textbf{  0.83}}} \\
+81-vertebra column 2c &   0.79 &   0.75 &   0.78 &   0.74 & \textcolor{black}{\textbf{  0.80}} & \underline{\textcolor{blue}{\textbf{  0.81}}} & \textcolor{red}{\textbf{  0.50}} \\ \hline
+82-vertebra column 3c &   0.73 &   0.76 &   0.75 &   0.72 & \textcolor{black}{\textbf{  0.77}} & \underline{\textcolor{blue}{\textbf{  0.79}}} & \textcolor{red}{\textbf{  0.33}} \\
+83-volcanoes a3 & \textcolor{blue}{\textbf{  0.34}} & \textcolor{blue}{\textbf{  0.34}} &   0.22 &   0.23 &   0.32 &   0.29 & \textcolor{red}{\textbf{  0.20}} \\
+84-volcanoes b2 & \textcolor{black}{\textbf{  0.27}} & \textcolor{black}{\textbf{  0.27}} & \textcolor{red}{\textbf{  0.20}} &   0.22 & \underline{\textcolor{blue}{\textbf{  0.29}}} &   0.25 & \textcolor{red}{\textbf{  0.20}} \\
 85-volcanoes d1 & \underline{\textcolor{blue}{\textbf{  0.24}}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\
-86-volcanoes e2 & \underline{\textcolor{blue}{\textbf{  0.25}}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.22 & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\
-87-voting &   0.91 & \textcolor{blue}{\textbf{  0.94}} &   0.91 &   0.89 & \textcolor{red}{\textbf{  0.88}} & \textcolor{blue}{\textbf{  0.94}} & \textcolor{blue}{\textbf{  0.94}} \\ \hline
-88-waveform v2 & \textcolor{red}{\textbf{  0.73}} &   0.75 & \textcolor{black}{\textbf{  0.83}} &   0.78 &   0.80 & \underline{\textcolor{blue}{\textbf{  0.86}}} &   0.80 \\
-89-wdbc & \textcolor{blue}{\textbf{  0.95}} &   0.93 & \textcolor{blue}{\textbf{  0.95}} &   0.94 &   0.92 & \textcolor{red}{\textbf{  0.50}} &   0.92 \\
-90-wholesale channel &   0.85 & \underline{\textcolor{blue}{\textbf{  0.90}}} &   0.87 &   0.84 &   0.86 & \textcolor{red}{\textbf{  0.50}} & \textcolor{black}{\textbf{  0.88}} \\
-91-wilt & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} &   0.66 &   0.51 &   0.60 \\
-92-wine &   0.96 &   0.91 &   0.93 &   0.95 & \textcolor{black}{\textbf{  0.97}} & \textcolor{red}{\textbf{  0.41}} & \underline{\textcolor{blue}{\textbf{  0.98}}} \\
-93-wine quality white... & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.34 &   0.29 &   0.29 & \textcolor{black}{\textbf{  0.36}} &   0.23 & \textcolor{red}{\textbf{  0.20}} \\
-94-yeast 4class & \textcolor{red}{\textbf{  0.57}} &   0.61 & \textcolor{black}{\textbf{  0.64}} &   0.61 &   0.58 & \underline{\textcolor{blue}{\textbf{  0.67}}} &   0.60 \\ \hline\end{tabular}\label{tab:balaccClassif2}
+86-volcanoes e2 & \underline{\textcolor{blue}{\textbf{  0.25}}} & \textcolor{black}{\textbf{  0.23}} & \textcolor{red}{\textbf{  0.20}} &   0.21 &   0.22 & \textcolor{red}{\textbf{  0.20}} & \textcolor{red}{\textbf{  0.20}} \\ \hline
+87-voting &   0.91 & \textcolor{blue}{\textbf{  0.94}} &   0.91 &   0.89 & \textcolor{red}{\textbf{  0.88}} & \textcolor{blue}{\textbf{  0.94}} & \textcolor{blue}{\textbf{  0.94}} \\
+88-waveform v2 & \textcolor{red}{\textbf{  0.73}} &   0.75 & \textcolor{black}{\textbf{  0.83}} &   0.78 &   0.80 &   0.80 & \underline{\textcolor{blue}{\textbf{  0.86}}} \\
+89-wdbc & \textcolor{blue}{\textbf{  0.95}} &   0.93 & \textcolor{blue}{\textbf{  0.95}} &   0.94 &   0.92 &   0.92 & \textcolor{red}{\textbf{  0.50}} \\
+90-wholesale channel &   0.85 & \underline{\textcolor{blue}{\textbf{  0.90}}} &   0.87 &   0.84 &   0.86 & \textcolor{black}{\textbf{  0.88}} & \textcolor{red}{\textbf{  0.50}} \\
+91-wilt & \textcolor{black}{\textbf{  0.67}} & \underline{\textcolor{blue}{\textbf{  0.89}}} & \textcolor{red}{\textbf{  0.50}} & \textcolor{red}{\textbf{  0.50}} &   0.66 &   0.60 &   0.51 \\ \hline
+92-wine &   0.96 &   0.91 &   0.93 &   0.95 & \textcolor{black}{\textbf{  0.97}} & \underline{\textcolor{blue}{\textbf{  0.98}}} & \textcolor{red}{\textbf{  0.41}} \\
+93-wine quality white... & \underline{\textcolor{blue}{\textbf{  0.37}}} &   0.34 &   0.29 &   0.29 & \textcolor{black}{\textbf{  0.36}} & \textcolor{red}{\textbf{  0.20}} &   0.23 \\
+94-yeast 4class & \textcolor{red}{\textbf{  0.57}} &   0.61 & \textcolor{black}{\textbf{  0.64}} &   0.61 &   0.58 &   0.60 & \underline{\textcolor{blue}{\textbf{  0.67}}} \\\end{tabular}\label{tab:balaccClassif2}
 \end{center}
 \end{table}
