--- a/resumo.tex
+++ b/resumo.tex
@@ -14,6 +14,8 @@ estratégias}
  URL, diagrama de classes, LOC, custos totais CPU/memória/disco, total de
 registros no BD}
 
+\tar{aprendiz / algoritmo de aprendizado / classificador}
+
 Apesar do crescente avanço no desenvolvimento de algoritmos capazes de induzir modelos preditivos
 numa grande diversidade de domínios, entraves de cunho econômico, dentre outros, ainda persistem.
 Embora tais modelos sejam construídos sem programação explícita,
