--- a/apendice2.tex
+++ b/apendice2.tex
@@ -13,25 +13,17 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 
 \input classifsTab
 
-\section{Acurácia das estratégias}
-\esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
-% só pra base 45 com ielm
-% \subsection{SVM}
+% \section{Acurácia das estratégias}
+% \esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
+% % só pra base 45 com ielm
+% 
+% \subsection{5NN}
 % \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaSVM
+% \input stratsALCKappa5NN
 % \end{landscape}\clearpage}
 % 
 % \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccSVM
-% \end{landscape}\clearpage}
-% 
-% \subsection{NB}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaNB
-% \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccNB
+% \input stratsBalAcc5NN
 % \end{landscape}\clearpage}
 % 
 % \subsection{C4.5}
@@ -43,24 +35,6 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \input stratsBalAccC4.5
 % \end{landscape}\clearpage}
 % 
-% \subsection{5NN}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappa5NN
-% \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAcc5NN
-% \end{landscape}\clearpage}
-% 
-% % \subsection{IELM}
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsALCKappaIELM
-% % \end{landscape}\clearpage}
-% % 
-% % \afterpage{\clearpage\begin{landscape}
-% % \input stratsBalAccIELM
-% % \end{landscape}\clearpage}
-% 
 % \subsection{CIELM}
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsALCKappaCIELM
@@ -68,6 +42,33 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % 
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccCIELM
+% \end{landscape}\clearpage}
+% 
+% \subsection{IELM}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaIELM
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccIELM
+% \end{landscape}\clearpage}
+% 
+% \subsection{NB}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaNB
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccNB
+% \end{landscape}\clearpage}
+% 
+% \subsection{SVM}
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsALCKappaSVM
+% \end{landscape}\clearpage}
+% 
+% \afterpage{\clearpage\begin{landscape}
+% \input stratsBalAccSVM
 % \end{landscape}\clearpage}
 % 
 % \subsection{VFDT}
